finished link edit open advanced mode functionality and fix collapse component animation

--- a/src/components/collapse/collapsible.scss
+++ b/src/components/collapse/collapsible.scss
@@ -1,5 +1,4 @@
 .my-collapse {
   overflow: hidden;
-  transition: height 0.7s ease-in-out;
-  border: solid 1px rgba(160, 160, 160, 0.284);
+  transition: height 0.8s ease-in-out;
 }
