--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -5,6 +5,7 @@
 
 .internal_content {
   background-color: #fff;
+  border: none;
   overflow: auto;
 }
 
